--- a/index.css
+++ b/index.css
@@ -4,28 +4,125 @@ body{
 }
 
 section{
+	width: 100%;
 	display: flex;
 	justify-content: space-around;
-	margin: 2%;
-	
+	margin-left: -0.5%;
+	margin-right: 2%;
 }
 .sidebar{
-	padding: 0; width: 70%;   
+	padding: 0; width: 100%;   
 	justify-content: space-between; margin-right: 10px;
-	border-style:solid ; background: lightyellow;
-}
-.jpeg{
-	margin: 6px;
-	border: 2px solid black;
-	display: inline-block;
-	justify-content: space-between;
-	width: 200px;
+	
 }
 .jpeg img{
-	width: 100%;
-	height: auto;
+	height: 100%; width: 100%;
 }
-.info {
-	padding:14px;
+header{
 	text-align: center;
+	display: block; 
+	background: purple;
+	color: red;
+}
+h1{
+	text-shadow: 2px 2px black;
+	text-align: center;font-size: 40px; margin: 0;
+}
+
+
+nav ul{
+	 display:flex; justify-content:flex-start;
+	 flex-wrap: wrap; 
+}
+nav ul li a{
+	padding-right: 20px;
+	margin-right: 30px;
+	font-size: 25px;
+	display: block;
+}
+nav ul li a:hover{
+	color: red;
+	
+}
+footer{
+	
+	width:95%;
+	margin-left:8px;
+	margin-right: -5%;
+	height: auto;
+	padding: 2%;
+ 	bottom: 0;
+	background: purple; 
+	margin-top:1%; color: green;
+	display: inline-flex;
+	justify-content: space-between;
+}
+.socialicons {
+	font-size: 20px;
+	color: red;
+	margin:0px 10px 5px 10px;
+}
+.socialicons a{
+	display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #737373;
+    color: #bfbfbf;
+}
+.socialicons ul {
+	list-style: none;
+	padding-left:2px;
+	margin: 0;
+}
+
+.socialicon ul li{
+	display: inline-block;
+}
+.socialicons img{
+	width: 100%
+}
+.copyright{
+	font-size: 20px;
+	color: red;
+}
+.location{
+	font-size: 20px;
+	color: red;
+	display: block;
+	 justify-content: space-between;
+	 margin: 16px 15px 16px 5px;
+}
+@media(max-width: 720px){
+	body{
+		width: 100%;
+}
+header h1{
+	font-size: 20px;
+	padding: 5%;
+}
+nav ul li a {
+font-size: 16px;
+}
+footer{
+	flex-direction: column;
+	width: 93%;
+	margin:1.5%;
+}
+section{
+	flex-direction: column;
+	width: 100%;
+	margin-left: 1.5%;
+	margin-right: -6%;
+
+}
+.sidebar{
+	width: 100%;
+	
+
+
+}
+.jpeg img{
+	width: 100%; height: 100%;
 }
