--- a/social.css
+++ b/social.css
@@ -1,11 +1,130 @@
-section div{
-	display: flex; padding:0;
+header{
+	text-align: center;
+	display: block; 
+	background: purple;
+	color: red;
+	margin-right: 0.5%;
+	margin-left: 0.5%;
 }
-section div ul{
+h1{
+	text-shadow: 2px 2px black;
+	text-align: center; font-size: 40px; margin: 0;
+}
+
+
+nav ul{
+	 display:flex; justify-content:flex-start;
+	 flex-wrap: wrap; 
+}
+nav ul li a{
+	padding-right: 20px;
+	margin-right: 30px;
+	font-size: 25px;
+	display: block;
+}
+nav ul li a:hover{
+	color: red;}
+body{
+	width: 100%;
+	margin: 0;
+	background: rgba(255,0,0,0.3);
+}
+section{
+	width: 95%;
+	height: 100%;
 	display: flex;
-	padding:0;
+	justify-content: space-around;
+	margin: 2%;
+	
 }
-section div ul a img{
-	height: 20px;
+section div{
+	display: inline-block; padding:0%;
+}
+section ul li{
+	display: inline-flex;
+}
+section fieldset li img{
+	width: 300px; height: 300px;
+}
+
+
+
+footer{
+	
+	width:95%;
+	margin-left:8px;
+	margin-right: -5%;
 	height: auto;
+	padding: 2%;
+ 	bottom: 0;
+	background: purple; 
+	margin-top:1%; color: green;
+	display: inline-flex;
+	justify-content: space-between;
+}
+.socialicons {
+	font-size: 20px;
+	color: red;
+	margin:0px 10px 5px 10px;
+}
+.socialicons a{
+	display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #737373;
+    color: #bfbfbf;
+}
+.socialicons ul {
+	list-style: none;
+	padding-left:2px;
+	margin: 0;
+}
+
+.socialicon ul li{
+	display: inline-block;
+}
+.socialicons img{
+	width: 100%
+}
+.copyright{
+	font-size: 20px;
+	color: red;
+}
+.location{
+	font-size: 20px;
+	color: red;
+	display: block;
+	 justify-content: space-between;
+	 margin: 16px 15px 16px 5px;
+}
+@media(max-width: 720px){
+	body{
+		width: 100%;
+
+		
+
+}
+header h1{
+	font-size: 20px;
+	padding: 5%;
+}
+nav ul li a {
+font-size: 16px;
+}
+footer{
+	flex-direction: column;
+	width: 93%;
+	margin:1.5%;
+}
+section{
+	flex-direction: column;
+	margin-right: -3%;
+	width: 95%;
+}
+section fieldset li img{
+	width: 100px;
+	height: 100px;
+
 }
