--- a/social.css
+++ b/social.css
@@ -1,5 +1,7 @@
 header{
+	/*to maintain header*/
 	text-align: center;
+/*display text to centre*/
 	display: block; 
 	background: purple;
 	color: red;
@@ -7,12 +9,14 @@ header{
 	margin-left: 0.5%;
 }
 h1{
+	/*decorate the heading with shadow*/
 	text-shadow: 2px 2px black;
 	text-align: center; font-size: 40px; margin: 0;
 }
 
 
 nav ul{
+	/*used flex to navigation menu*/
 	 display:flex; justify-content:flex-start;
 	 flex-wrap: wrap; 
 }
@@ -23,6 +27,7 @@ nav ul li a{
 	display: block;
 }
 nav ul li a:hover{
+	/*to change the color to red*/
 	color: red;}
 body{
 	width: 100%;
@@ -38,13 +43,16 @@ section{
 	
 }
 section div{
-	display: inline-block; padding:0%;
+	display: inline-block;
+/*display content to block*/
+	 padding:0%;
 }
 section ul li{
 	display: inline-flex;
 }
 section fieldset li img{
 	width: 300px; height: 300px;
+/*set the image hight and width*/
 }
 
 
@@ -63,6 +71,7 @@ footer{
 	justify-content: space-between;
 }
 .socialicons {
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 	margin:0px 10px 5px 10px;
@@ -73,6 +82,7 @@ footer{
     height: 40px;
     line-height: 40px;
     text-align: center;
+    /*place text to centre*/
     border: 1px solid #737373;
     color: #bfbfbf;
 }
@@ -89,10 +99,12 @@ footer{
 	width: 100%
 }
 .copyright{
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 }
 .location{
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 	display: block;
@@ -100,31 +112,35 @@ footer{
 	 margin: 16px 15px 16px 5px;
 }
 @media(max-width: 720px){
+	/*make the site media friendly*/
 	body{
 		width: 100%;
-
-		
+		/*set body width 100%*/		
 
 }
 header h1{
 	font-size: 20px;
+	/*font size to be 20px*/
 	padding: 5%;
 }
 nav ul li a {
 font-size: 16px;
 }
 footer{
+	/*display all the content to column*/
 	flex-direction: column;
 	width: 93%;
 	margin:1.5%;
 }
 section{
 	flex-direction: column;
+	/*display all the content to column*/
 	margin-right: -3%;
 	width: 95%;
 }
 section fieldset li img{
 	width: 100px;
 	height: 100px;
+	/*reduce size of the image due to reduction in size of display*/
 
 }
