--- a/about.css
+++ b/about.css
@@ -1,11 +1,134 @@
 .sidebar{
-	padding: 3%; width: 70%;   
-	justify-content: space-between; margin-right: 10px;
-	border-style:solid ; background: lightyellow;
+	/*to manage the division named sidebar*/
+	padding: 0%; width: 100%;   
+	justify-content: space-between; margin-right: -3%;
 	font-size: 20px;
 	font-style: bold;
+	
 }
-.sidebar1 ul li a{
+header{
+	text-align: center;
+	display: block; 
+	background: purple;
+	color: red;
+}
+header h1{
+	text-shadow: 2px 2px black;
+	text-align: center;font-size: 40px; margin: 0;
+}
+nav{
+	margin-left: 2%;
+}
+
+nav ul{
+	 display:flex; justify-content:flex-start;
+	 flex-wrap: wrap; 
+}
+nav ul li a{
+	padding-right: 20px;
+	margin-right: 30px;
+	font-size: 25px;
+	display: block;
+}
+nav ul li a:hover{
+	/*to change the color to red when touched*/
+	color: red;
+	
+}
+body{
+	width: 100%;
+	margin: 0;
+	background: rgba(255,0,0,0.3);
+}
+
+section{
+	width: 98%;
+	display: flex;
+	justify-content: space-around;
+	margin-left: -0.5%;
+	margin-right: 2%;
+}
+footer{
+	
+	width:95%;
+	margin-left:8px;
+	margin-right: -5%;
+	height: auto;
+	padding: 2%;
+ 	bottom: 0;
+	background: purple; 
+	margin-top:1%; color: green;
+	display: inline-flex;
+	justify-content: space-between;
+}
+.socialicons {
+	/*one of the division of footer*/
 	font-size: 20px;
-	font-style: bold;
+	color: red;
+	margin:0px 10px 5px 10px;
+}
+.socialicons a{
+	display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #737373;
+    color: #bfbfbf;
+}
+.socialicons ul {
+	list-style: none;
+	padding-left:2px;
+	margin: 0;
+}
+
+.socialicon ul li{
+	display: inline-block;
+}
+.socialicons img{
+	width: 100%
+}
+.copyright{
+	/*one of the division of footer*/
+	font-size: 20px;
+	color: red;
+}
+.location{
+	/*one of the division of footer*/
+	font-size: 20px;
+	color: red;
+	display: block;
+	 justify-content: space-between;
+	 margin: 16px 15px 16px 5px;
+}
+@media(max-width: 720px){
+	/*to make media friendly*/
+	/*if the width is less than 720px below code is accessed*/
+	body{
+		width: 100%;
+	}
+header h1{
+	font-size: 20px;
+	padding: 5%;
+}
+nav ul li a {
+	/*to set the font size16px*/
+font-size: 16px;
+}
+footer{
+	/*display content and division of footer to column*/
+	flex-direction: column;
+	width: 93%;
+	margin:1.5%;
+}
+section{
+	flex-direction: column;
+	/*content of section to be displayed as column*/
+	margin-right: -3%;
+}
+.sidebar{
+	width: 100%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+
 }
