--- a/cv.css
+++ b/cv.css
@@ -1,14 +1,151 @@
 section{
-	color:black;	height: 100%;	width: 100%; display: flex; 
+	color:black;
+	width: 100%; 
+	display: flex; 
+	justify-content: space-around;
+}
+.owncv{
+	margin-left: 1%;
 }
 .rightform{
-	width: 30%; height:100%; display: block; padding: 2%; margin-right: 10px;
+	width: 30%;
+	height:100%;
+	/*height to be 100%*/
+	display: block;
+	/*display content to block*/
+	margin-left: 1%;
+	margin-right: 0.5%;
 }
-
 .rightform img{
 	width: 100%;
-	height: auto;
 }
-section h3{
+header{
+	/*to maintain header*/
+	text-align: center;
+	/*display text to centre*/
+	display: block; 
+	background: purple;
+	color: red;
+}
+h1{
+	/*decorate the heading with shadow*/
+	text-shadow: 2px 2px black;
+	text-align: center;font-size: 40px; margin: 0;
+}
+nav ul{
+	 display:flex; justify-content:flex-start;
+	 flex-wrap: wrap; 
+}
+nav ul li a{
+	padding-right: 20px;
+	/*padding is set*/
+	margin-right: 30px;
+	font-size: 25px;
+	display: block;
+}
+nav ul li a:hover{
+	/*to change the color to red*/
+	color: red;
 	
+}
+body{
+	margin: 0;
+	background: rgba(255,0,0,0.3);
+}
+
+footer{
+	position: bottom;
+	width:95%;
+	margin-left:8px;
+	height: auto;
+	/*to make height according to device*/
+	padding: 2%;
+ 	bottom: 0;
+	background: purple; 
+	margin-top:1%; color: green;
+	display: inline-flex;
+	justify-content: space-between;
+}
+.socialicons {
+		/*one of the division of footer*/
+	font-size: 20px;
+	color: red;
+	margin:0px 10px 5px 10px;
+}
+.socialicons a{
+	display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    border: 1px solid #737373;
+    /*created solid border*/
+    color: #bfbfbf;
+}
+.socialicons ul {
+	list-style: none;
+	padding-left:2px;
+	margin: 0;
+}
+
+.socialicon ul li{
+	display: inline-block;
+}
+.socialicons img{
+	width: 100%
+}
+.copyright{
+		/*one of the division of footer*/
+	font-size: 20px;
+	color: red;
+}
+.location{
+		/*one of the division of footer*/
+	font-size: 20px;
+	color: red;
+	display: block;
+	 justify-content: space-between;
+	 margin: 16px 15px 16px 5px;
+}
+@media(max-width: 720px){
+	/*make the site media friendly*/
+	body{
+		width: 100%;
+			/*set body width 100%*/	
+	}
+header h1{
+	font-size: 20px;
+	/*font size to be 20px*/
+	padding: 5%;
+}
+nav ul li a {
+font-size: 16px;
+/*set size to 16px*/
+}
+footer{
+	flex-direction: column;
+	/*display content to column*/
+	width: 93%;
+	margin:1.5%;
+}
+section{
+	flex-direction: column;
+		/*display content to column*/
+}
+.owncv{
+	/*division called owncv*/
+	width: 90%;
+	margin-top: 5%;
+	margin-bottom: 5%;
+
+}
+table{
+	/*display content of table to column*/
+flex-direction: column;
+}
+table tr{
+	flex-direction: column;
+}
+table td{
+	flex-direction: column;
 }
