--- a/index.css
+++ b/index.css
@@ -10,12 +10,15 @@ section{
 	margin-left: -0.5%;
 	margin-right: 2%;
 }
-.sidebar{
+.sidebar{	
+	/*to manage the division named sidebar*/
 	padding: 0; width: 100%;   
-	justify-content: space-between; margin-right: 10px;
+	justify-content: space-between;
+	margin-left: 1.5%;
 	
 }
 .jpeg img{
+	/*the height and width is set as 100% to make media responsive.*/
 	height: 100%; width: 100%;
 }
 header{
@@ -25,12 +28,14 @@ header{
 	color: red;
 }
 h1{
+	/*to decorate the heading of header text shadow is used*/
 	text-shadow: 2px 2px black;
 	text-align: center;font-size: 40px; margin: 0;
 }
 
 
 nav ul{
+	/*content are displayed using flex */
 	 display:flex; justify-content:flex-start;
 	 flex-wrap: wrap; 
 }
@@ -41,6 +46,7 @@ nav ul li a{
 	display: block;
 }
 nav ul li a:hover{
+	/*to change the color to red when touched*/
 	color: red;
 	
 }
@@ -58,6 +64,7 @@ footer{
 	justify-content: space-between;
 }
 .socialicons {
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 	margin:0px 10px 5px 10px;
@@ -84,10 +91,12 @@ footer{
 	width: 100%
 }
 .copyright{
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 }
 .location{
+	/*one of the division of footer*/
 	font-size: 20px;
 	color: red;
 	display: block;
@@ -95,8 +104,13 @@ footer{
 	 margin: 16px 15px 16px 5px;
 }
 @media(max-width: 720px){
+	/*to make media friendly*/
+	/*if the width is less than 720px below code is accessed*/
 	body{
 		width: 100%;
+}
+header{
+	width: 100%;
 }
 header h1{
 	font-size: 20px;
@@ -115,10 +129,12 @@ section{
 	width: 100%;
 	margin-left: 1.5%;
 	margin-right: -6%;
-
+	justify-content: space-around;
+	margin-left: -0.5%;
+	margin-right: 2%;
 }
 .sidebar{
-	width: 100%;
+	width: 98%;
 	
 
 
