--- a/modlesgp.css
+++ b/modlesgp.css
@@ -1,55 +1,70 @@
+body{
+	width: 98%;
+	padding: 0;
+	margin: 0;
+	background: rgba(255,0,0,0.3);
+}
+
+section{
+	width: 99%;
+	display: flex;
+	justify-content: space-around;
+	margin-left: 5px;
+	/*margin-right: %;	*/
+
+}
+section div{
+	width: 99%;
+	display: inline-block;
+/*display content to block*/
+	 padding:0%;
+	 font-size: 16px;
+	 margin-right: 0;
+}
+section ul li{
+	display: inline-flex;
+}
+section li img{
+	border: solid;
+	margin: 2%;
+	width: 300px; height:300px;
+/*set the image hight and width*/
+}
 header{
-	/*to maintain header*/
+	width: 99%;
+	margin-left: 1%;
 	text-align: center;
-	/*display text to centre*/
 	display: block; 
 	background: purple;
 	color: red;
-	margin-right: 0.5%;
-	margin-left: 0.5%;
 }
 h1{
-	/*decorate the heading with shadow*/
+	/*to decorate the heading of header text shadow is used*/
 	text-shadow: 2px 2px black;
-	/*creat shadow*/
-	text-align: center; font-size: 40px; margin: 0;
-	/*make font size*/
+	text-align: center;font-size: 40px; margin: 0;
 }
 
-
+nav{
+	width: 95%;
+}
 nav ul{
+	/*content are displayed using flex */
 	 display:flex; justify-content:flex-start;
-	 /*use flex to navigation*/
 	 flex-wrap: wrap; 
-	 /*work according to size of screen*/
 }
 nav ul li a{
 	padding-right: 20px;
 	margin-right: 30px;
 	font-size: 25px;
 	display: block;
-	/*display as block*/
 }
 nav ul li a:hover{
-	/*change the color while cursor is placed to red*/
-	color: red;}
-body{
-	width: 100%;
-	/*body width is set to be 100% for mobile friendly*/
-	margin: 0;
-	background: rgba(255,0,0,0.3);
-}
-section{
-	width: 95%;
-	height: 100%;
-	display: flex;
-	/*removing unnecessary space*/
-	justify-content: space-around;
-	margin: 2%;
+	/*to change the color to red when touched*/
+	color: red;
 	
 }
 footer{
-	/*footer to decorate*/
+	
 	width:95%;
 	margin-left:8px;
 	margin-right: -5%;
@@ -66,18 +81,14 @@ footer{
 	font-size: 20px;
 	color: red;
 	margin:0px 10px 5px 10px;
-	/*margin top 0,righ t10px,bottom 5px, left 10px*/
 }
 .socialicons a{
 	display: inline-block;
-	/*displaying in block*/
     width: 40px;
     height: 40px;
     line-height: 40px;
     text-align: center;
-    /*text in the centre*/
     border: 1px solid #737373;
-    /*creatin g solid border*/
     color: #bfbfbf;
 }
 .socialicons ul {
@@ -106,33 +117,40 @@ footer{
 	 margin: 16px 15px 16px 5px;
 }
 @media(max-width: 720px){
-	/*make the site media friendly*/
+	/*to make media friendly*/
+	/*if the width is less than 720px below code is accessed*/
 	body{
 		width: 100%;
-				/*set body width 100%*/	
+}
+header{
+	width: 99%;
 
-	}
+}
 header h1{
 	font-size: 20px;
-	/*font size to be 20px*/
 	padding: 5%;
 }
 nav ul li a {
 font-size: 16px;
-/*set size to 16px*/
 }
 footer{
 	flex-direction: column;
-	/*display content to column*/
 	width: 93%;
 	margin:1.5%;
 }
+
 section{
 	flex-direction: column;
-	/*display content to column*/
-	width: 90%;
+	/*display all the content to column*/
+	margin-right: -3%;
+	width: 98%;
 }
-form{
-	width: 100%;
-	/*form with is 100%*/
+section div{
+	font-size: 14px;
+}
+section fieldset li img{
+	width: 150px;
+	height: 150px;
+	/*reduce size of the image due to reduction in size of display*/
+
 }
